QPID-2269: Remove the hiding fields for object/name/vhost and use the correct values from the superclass. Allow viewing content of messages with IDs outside the integer range.
git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@890154 13f79535-47bb-0310-9956-ffa450edef68